; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mmdrv/extr_kernel.c_OpenKernelDevice.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mmdrv/extr_kernel.c_OpenKernelDevice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_DEVICE_NAME_LENGTH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Opening kernel device %ls\0A\00", align 1
@MMSYSERR_NOERROR = common dso_local global i64 0, align 8
@GENERIC_READ = common dso_local global i32 0, align 4
@FILE_FLAG_OVERLAPPED = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @OpenKernelDevice(i32 %0, i32 %1, i32 %2, i64* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64* %3, i64** %9, align 8
  %15 = load i32, i32* @MAX_DEVICE_NAME_LENGTH, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %11, align 8
  %18 = alloca i32, i64 %16, align 16
  store i64 %16, i64* %12, align 8
  store i32 0, i32* %13, align 4
  %19 = load i64*, i64** %9, align 8
  %20 = call i32 @ASSERT(i64* %19)
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i64 @CobbleDeviceName(i32 %21, i32 %22, i32* %18)
  store i64 %23, i64* %10, align 8
  %24 = call i32 @DPRINT(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32* %18)
  %25 = load i64, i64* %10, align 8
  %26 = load i64, i64* @MMSYSERR_NOERROR, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %4
  %29 = load i64, i64* %10, align 8
  store i64 %29, i64* %5, align 8
  store i32 1, i32* %14, align 4
  br label %52

30:                                               ; preds = %4
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* @GENERIC_READ, align 4
  %33 = icmp ne i32 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %30
  %35 = load i32, i32* @FILE_FLAG_OVERLAPPED, align 4
  store i32 %35, i32* %13, align 4
  br label %36

36:                                               ; preds = %34, %30
  %37 = load i32, i32* %8, align 4
  %38 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %39 = load i32, i32* @OPEN_EXISTING, align 4
  %40 = load i32, i32* %13, align 4
  %41 = call i64 @CreateFile(i32* %18, i32 %37, i32 %38, i32* null, i32 %39, i32 %40, i32* null)
  %42 = load i64*, i64** %9, align 8
  store i64 %41, i64* %42, align 8
  %43 = load i64*, i64** %9, align 8
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %46 = icmp eq i64 %44, %45
  br i1 %46, label %47, label %50

47:                                               ; preds = %36
  %48 = call i32 (...) @GetLastError()
  %49 = call i64 @ErrorToMmResult(i32 %48)
  store i64 %49, i64* %5, align 8
  store i32 1, i32* %14, align 4
  br label %52

50:                                               ; preds = %36
  %51 = load i64, i64* @MMSYSERR_NOERROR, align 8
  store i64 %51, i64* %5, align 8
  store i32 1, i32* %14, align 4
  br label %52

52:                                               ; preds = %50, %47, %28
  %53 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %53)
  %54 = load i64, i64* %5, align 8
  ret i64 %54
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ASSERT(i64*) #2

declare dso_local i64 @CobbleDeviceName(i32, i32, i32*) #2

declare dso_local i32 @DPRINT(i8*, i32*) #2

declare dso_local i64 @CreateFile(i32*, i32, i32, i32*, i32, i32, i32*) #2

declare dso_local i64 @ErrorToMmResult(i32) #2

declare dso_local i32 @GetLastError(...) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
